--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 #upload request
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#server
+server.error.whitelabel.enabled=false
