--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 #server
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
