just forget delete println

--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #mysql
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/musicstreaming-schema
-spring.datasource.username=root
-spring.datasource.password=sinthonwilke
+spring.datasource.username=ENTER USERNAME
+spring.datasource.password=ENTER PASSWORD
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 #upload request
 spring.servlet.multipart.max-file-size=100MB
