another println to delete

--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #mysql
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/musicstreaming-schema
-spring.datasource.username=ENTER USERNAME
-spring.datasource.password=ENTER PASSWORD
+spring.datasource.username=root
+spring.datasource.password=sinthonwilke
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=false
