--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #mysql
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/musicstreaming-schema
-spring.datasource.username=username
+spring.datasource.url = jdbc:mysql://172.17.0.2:3306/musicstreamingSchema
+spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
