--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql
-spring.datasource.url = jdbc:mysql://172.17.0.2:3306/musicstreamingSchema
+spring.datasource.url=jdbc:mysql://mysql-container:3306/musicstreaming
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
@@ -11,4 +11,5 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 #server
+server.port=8080
 server.error.whitelabel.enabled=true
