--- a/Music Streaming/demo/demo/src/main/resources/application.properties
+++ b/Music Streaming/demo/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #mysql
-spring.datasource.url=jdbc:mysql://mysql-container:3306/musicstreaming
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://mysql-container:3306/musicstreaming
+#spring.datasource.username=root
+#spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=false
